--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "do_while_challenge",
   "version": "1.0.0",
   "main": "index.ts",
+  "scripts": {
+    "start": "tsnd --respawn --transpile-only src/index.ts",
+    "test": "jest"
+  },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "husky": "^7.0.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -16,5 +21,8 @@
     "typescript": "^4.5.3"
   },
   "author": "Kauê Fraga Rodrigues <kauefragarodrigues456@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=16.13.1"
+  }
 }
