--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "husky": "^7.0.4"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^15.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.12",
+    "commitlint": "^15.0.0",
     "jest": "^27.4.4",
     "prisma": "^3.6.0",
     "ts-jest": "^27.1.1",
