--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "main": "index.ts",
   "scripts": {
     "start": "tsnd --respawn --transpile-only src/index.ts",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "prisma generate --schema=./src/prisma/schema.prisma"
   },
   "dependencies": {
+    "@prisma/client": "^3.6.0",
     "express": "^4.17.1",
     "husky": "^7.0.4"
   },
