--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "do_while_challenge",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "scripts": {
     "build": "yarn tsc",
     "start": "yarn build && node dist/index.js",
     "dev": "tsnd --respawn --transpile-only src/index.ts",
     "test": "jest",
+    "test:e2e": "jest --config jest.e2e.config.ts",
     "prisma:generate": "prisma generate --schema=./prisma/schema.prisma",
     "prisma:migrations": "prisma migrate dev",
     "prisma:introspect": "prisma db pull && echo 'if needed: yarn prisma:generate'"
   },
   "dependencies": {
-    "@prisma/client": "^3.8.1",
+    "@prisma/client": "^3.15.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^14.3.2",
@@ -28,16 +29,20 @@
     "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.11.12",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "commitlint": "^15.0.0",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
     "jest": "^27.4.4",
-    "prisma": "^3.8.1",
+    "prisma": "^3.15.1",
+    "supertest": "^6.2.3",
     "ts-jest": "^27.1.1",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.3"
   },
   "author": "Kauê Fraga Rodrigues <kauefragarodrigues456@gmail.com>",
-  "license": "MIT",
-  "engines": {
-    "node": ">=16.13.1"
-  }
+  "license": "MIT"
 }
